[workspace]
resolver = "3"
members = ["_workspace-hack", "config_loader", "uuid_generator"]

[workspace.package]
edition = "2024"
authors = ["Gabriel Putra Pinastika <gabri.putra@gmail.com>"]
license = "MIT"
repository = "https://github.com/polaris-trade/libs"
publish = ["github"]

[workspace.dependencies]

[profile.ci]
inherits = "dev"
opt-level = 0
debug = false
strip = "debuginfo"
codegen-units = 16
