[workspace]
resolver = "3"
members = [
  "_workspace-hack",
  "streams",
  "logger",
  "config_loader",
  "data_types",
  "queue",
  "task_manager",
  "connector",
  "uuid-generator",
  "http_client",
]

[workspace.metadata.cargo-machete]

[workspace.dependencies]
reqwest = { version = "0.12.24", default-features = false, features = [
  "rustls-tls",
  "gzip",
  "brotli",
  "deflate",
  "json",
  "stream",
  "multipart",
  "charset",
  "http2",
  "system-proxy",
] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
reqwest-tracing = { version = "0.5.8", features = ["opentelemetry_0_30"] }
http = "1.3.1"
config = { version = "0.15.19" }
bb8 = { version = "0.9.0" }
bb8-tiberius = { version = "0.16.0" }
tiberius = { version = "0.12.3", default-features = false, features = [
  "tokio-rustls",
  "sql-browser-tokio",
  "rust_decimal",
  "chrono",
  "time",
] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.15"
mio = "1.1.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
syn = { version = "2.0.110", features = ["full"] }
core_affinity = "0.8.3"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
uuid = { version = "1.18.1", features = ["v4", "v7"] }
uuid-simd = { version = "0.8.0" }
redis = { version = "0.32.7", features = [
  "tokio-comp",
  "tls-rustls",
  "tokio-rustls-comp",
  "connection-manager",
  "cluster-async",
  "r2d2",
  "json",
  "sentinel",
  "rust_decimal",
  "uuid",
] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "macros",
  "uuid",
  "chrono",
  "rust_decimal",
  "json",
] }
bytes = "1.10.1"
async-trait = "0.1.89"
anyhow = "1.0.100"
time = { version = "0.3.44", features = ["macros"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-attributes = { version = "0.1.30" }
tracing-core = { version = "0.1.34" }
tracing-subscriber = { version = "0.3.20", features = [
  'time',
  'env-filter',
  'json',
] }
tracing-error = { version = "0.2.1" }
tracing-unwrap = { version = "1.0.1" }
tracing-appender = { version = "0.2.3" }
tracing-opentelemetry = { version = "0.31.0" }
serde = "1.0.228"
serde_json = "1.0.145"
chrono = "0.4.42"
rust_decimal = "1.39.0"
thiserror = "2.0.17"
rstest = { version = "*" }
tempfile = { version = "*" }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
tokio-graceful-shutdown = "0.19.0"
opentelemetry = { version = "0.30.0" }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = [
  "grpc-tonic",
  "trace",
  "logs",
  "metrics",
] }
opentelemetry-appender-tracing = { version = "0.30" }
opentelemetry-semantic-conventions = { version = "0.30.0" }
opentelemetry-proto = { version = "0.30.0" }
opentelemetry-stdout = { version = "0.30.0", features = [
  "trace",
  "logs",
  "metrics",
] }
tonic = { version = "0.14.2" }
