[package]
name = "connector"
version = "0.1.0"
edition = "2024"
authors = [
  "Gabriel Putra Pinastika <gabri.putra@gmail.com> (https://github.com/0x67)",
]

[features]
default = []
redis = ["dep:redis"]
sqlx-postgres = ["sqlx/postgres"]
sqlx-mysql = ["sqlx/mysql"]
mssql = [
  "dep:tiberius",
  "dep:tokio",
  "dep:tokio-util",
  "dep:bb8",
  "dep:bb8-tiberius",
]
kafka = ["dep:rdkafka"]

[dependencies]
config_loader = { path = "../config_loader" }
tiberius = { workspace = true, optional = true }
bb8 = { workspace = true, optional = true }
bb8-tiberius = { workspace = true, optional = true }
thiserror = { workspace = true }
redis = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
rdkafka = { workspace = true, optional = true }
_workspace-hack = { version = "0.1", path = "../_workspace-hack" }
