[package]
name = "http_client"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
reqwest-tracing = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
logger = { path = "../logger", features = ["otel"] }
http = { workspace = true }
_workspace-hack = { version = "0.1", path = "../_workspace-hack" }
