[package]
name = "logger"
version = "0.1.0"
edition = "2024"
authors = [
  "Gabriel Putra Pinastika <gabri.putra@gmail.com> (https://github.com/0x67)",
]

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["stdout"]
stdout = ["dep:tracing-appender"]
file = ["dep:tracing-appender"]
otel = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry-appender-tracing",
  "dep:opentelemetry-semantic-conventions",
  "dep:opentelemetry-proto",
  "dep:opentelemetry-stdout",
  "dep:tracing-opentelemetry",
  "dep:tokio",
  "dep:tonic",
]

[dependencies]
config_loader = { path = "../config_loader" }
# Core tracing dependencies
anyhow = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["valuable"] }
tracing-subscriber = { workspace = true }
tracing-unwrap = { workspace = true }

# File based logging
tracing-appender = { workspace = true, optional = true }

# OpenTelemetry dependencies for traces, logs, and metrics (optional)
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
opentelemetry-proto = { workspace = true, optional = true }
opentelemetry-stdout = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
_workspace-hack = { version = "0.1", path = "../_workspace-hack" }
