[package]
name = "streams"
version = "0.1.0"
edition = "2024"
authors = [
  "Gabriel Putra Pinastika <mailto:gabri.putra@gmail.com> (https://github.com/0x67)",
]

[features]
default = ["tokio_transport"]
tokio_transport = []
mio_transport = ["dep:mio"]
afxdp_transport = ["dep:afxdp"]
xsk_transport = ["dep:xsk-rs"]
io_uring_transport = ["dep:tokio-uring"]
transport_slice = []
transport_bytes = []

[target.'cfg(unix)'.dependencies]
xsk-rs = { version = "0.8.0", optional = true }
afxdp = { version = "0.4.0", optional = true }
tokio-uring = { version = "0.5.0", optional = true }

[dependencies]
mio = { workspace = true, optional = true, features = ["net"] }
crossbeam-channel = { workspace = true }
bytes = { workspace = true }
data_types = { path = "../data_types" }
queue = { path = "../queue" }
async-trait = { workspace = true }
logger = { path = "../logger" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
_workspace-hack = { version = "0.1", path = "../_workspace-hack" }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
core_affinity = { workspace = true }
