[package]
name = "uuid-generator"
version = "0.1.0"
edition = "2024"
authors = [
  "Gabriel Putra Pinastika <mailto:gabri.putra@gmail.com> (https://github.com/0x67)",
]
publish = ["github"]
repository = "https://github.com/polaris-trade/polaris-trade-libs"

[dependencies]
uuid = { workspace = true, features = ["serde"] }
uuid-simd = { workspace = true }
serde = { workspace = true }
_workspace-hack = { version = "0.1", path = "../_workspace-hack" }
