[package]
name = "uuid_generator"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
uuid = { workspace = true, features = ["serde"] }
uuid-simd = { workspace = true }
serde = { workspace = true }
_workspace-hack = { version = "0.1", path = "../_workspace-hack" }
